fix: show scrollbar on bce-input textarea

--- a/packages/core/src/components/bce-input/bce-input.scss
+++ b/packages/core/src/components/bce-input/bce-input.scss
@@ -46,7 +46,6 @@
 
   textarea {
     resize: none;
-    overflow-y: hidden;
     padding: 10px 12px;
   }
 
